<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul">

    <TextView
        android:id="@+id/TextoParaDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/AgregarccioDia"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AgregarDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/TextoParaDia"
        android:hint="@string/Seledia"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/botonAgregarDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toTopOf="@id/AgregarDias"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/btnagregar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>